<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bruno.frd.biblio.ui.PasswordActivity"
    android:theme="@style/AppTheme.NoActionBar"
    android:id="@+id/coordinator">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/pw_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/pw_linear_layout"

        tools:context="com.bruno.frd.biblio.ui.PasswordActivity">

        <ScrollView
            android:id="@+id/password_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/change_password_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_actual_password"
                    android:layout_width="match_parent"
                    android:theme="@style/PasswordTextField"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/oldpw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/actual_password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/PasswordTextField"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/new_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/float_label_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/PasswordTextField"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirm_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/password_change_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>